Add Org MS and update existing code.

--- a/MS-Gateway/src/main/resources/application.properties
+++ b/MS-Gateway/src/main/resources/application.properties
@@ -17,3 +17,8 @@ management.endpoints.web.exposure.include=*
 
 spring.cloud.gateway.discovery.locator.enabled=true
 spring.cloud.gateway.discovery.locator.lower-case-service-id=true
+
+
+management.tracing.sampling.probability=1.0 
+logging.pattern.level=%5p [${spring.application.name:},%X{traceId:-},%X{spanId:-}]
+logging.level.org.springframework.web=DEBUG
