--- a/employee-service/src/main/resources/application.properties
+++ b/employee-service/src/main/resources/application.properties
@@ -1,11 +1,46 @@
 spring.application.name=EMPLOYEE-SERVICE
 
-server.port=8081
+#server.port=8081
+#
+#spring.datasource.url=jdbc:mysql://localhost:3306/employee_db
+#spring.datasource.username=root
+#spring.datasource.password=root
+#
+#spring.jpa.hibernate.ddl-auto=update
+#
+#eureka.instance.client.serverUrl.defaultZone=http://localhost:8761/eureka/
 
-spring.datasource.url=jdbc:mysql://localhost:3306/employee_db
-spring.datasource.username=root
-spring.datasource.password=root
 
-spring.jpa.hibernate.ddl-auto=update
+spring.config.import=optional:configserver:http://localhost:8888
 
-eureka.instance.client.serverUrl.defaultZone=http://localhost:8761/eureka/
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
+#management.endpoints.web.exposure.include=*
+
+management.tracing.sampling.probability=1.0 
+logging.pattern.level=%5p [${spring.application.name:},%X{traceId:-},%X{spanId:-}]
+logging.level.org.springframework.web=DEBUG
+
+# Actuator endpoints for Circuit Breaker
+management.health.circuitbreakers.enabled=true
+management.endpoints.web.exposure.include=health
+management.endpoint.health.show-details=always
+
+# Circuit Breaker configuration
+resilience4j.circuitbreaker.instances.EMPLOYEE-SERVICE.registerHealthIndicator=true
+resilience4j.circuitbreaker.instances.EMPLOYEE-SERVICE.failureRateThreshold=50
+resilience4j.circuitbreaker.instances.EMPLOYEE-SERVICE.minimumNumberOfCalls=5
+resilience4j.circuitbreaker.instances.EMPLOYEE-SERVICE.automaticTransitionFromOpenToHalfOpenEnabled=true
+resilience4j.circuitbreaker.instances.EMPLOYEE-SERVICE.waitDurationInOpenState=5s
+resilience4j.circuitbreaker.instances.EMPLOYEE-SERVICE.permittedNumberOfCallsInHalfOpenState=3
+resilience4j.circuitbreaker.instances.EMPLOYEE-SERVICE.slidingWindowSize=10
+resilience4j.circuitbreaker.instances.EMPLOYEE-SERVICE.slidingWindowType=COUNT_BASED
+resilience4j.circuitbreaker.configs.default.register-health-indicator=true
+resilience4j.circuitbreaker.instances.EMPLOYEE-SERVICE.base-config=default
+
+# Retry configuration
+resilience4j.retry.instances.EMPLOYEE-SERVICE.registerHealthIndicator=true
+resilience4j.retry.instances.EMPLOYEE-SERVICE.maxRetryAttempts=5
+resilience4j.retry.instances.EMPLOYEE-SERVICE.waitDuration=2s
